# Advent-of-code

./: .gitignore  .ocamlformat  aoc.opam  dune-project
inputs/: day11  day17  day24  day3  day6
lib/: aoc.ml  aoc.mli  dune
zig/: day1.zig
