(lang dune 3.16)

(name aoc)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Kristof Toth")

(maintainers "Kristof Toth")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc)
 (synopsis "Advent of code 2023")
 (description "Advent of code 2023")
 (depends ocaml dune)
 (tags
  (topics "aoc" )))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
